# elden-ring-loadout

./: CMakeLists.txt  README.md  erloadout.ini
src/: dllmain.cpp  erloadout_config.cpp  erloadout_config.hpp  erloadout_gear_info.hpp  erloadout_ids.hpp  erloadout_loadout.cpp  erloadout_loadout.hpp  erloadout_logging.cpp  erloadout_logging.hpp  erloadout_messages.cpp  erloadout_messages.hpp  erloadout_messages_by_lang.cpp  erloadout_save_file.cpp  erloadout_save_file.hpp  erloadout_saveslot.cpp  erloadout_saveslot.hpp  erloadout_shop.cpp  erloadout_shop.hpp  erloadout_stringify.cpp  erloadout_stringify.hpp  erloadout_talkscript.cpp  erloadout_talkscript_states.hpp  erloadout_to_player.cpp  erloadout_to_player.hpp  messages.hpp
src/from/: EzState.hpp  List.hpp  MapItemManImpl.cpp  MapItemManImpl.hpp  WorldChrManImp.cpp  WorldChrManImp.hpp
src/internal/: EzState.hpp  GameMan.hpp  List.hpp  WorldChrMan.hpp
src/messages/: LoadoutMessages.cpp  LoadoutMessages.hpp  Messages.cpp  messages.hpp
src/saveslot/: LoadoutSaveSlot.cpp  LoadoutSaveSlot.hpp  StringifyLoadout.cpp  StringifyLoadout.hpp
src/shop/: LoadoutShop.cpp  LoadoutShop.hpp
src/talkscript/: CustomEzStates.hpp  LoadoutTalkScript.cpp  LoadoutTalkScript.hpp
src/utils/: ParamUtils.hpp  PlayerUtils.cpp  PlayerUtils.hpp  players.cpp  players.hpp
